readme, custom date in web interface, changed save in DB logic, new endpoints
